# embedded-gdb-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  package.json
.github/workflows/: build.yml  release.yml
scripts/: build-packages.js  set-version.js
src/: error.rs  lib.rs  main.rs  session.rs  tools.rs
