[package]
name = "embedded-gdb-mcp"
version = "0.0.1"
edition = "2021"
description = "MCP server for GDB debugging functionality"
license = "MIT"

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = "0.4"
regex = "1"

[[bin]]
name = "embedded-gdb-mcp"
path = "src/main.rs"

[lib]
name = "embedded_gdb_mcp"
path = "src/lib.rs"
