[package]
name = "embedded-gdb-mcp"
version = "0.0.3"
edition = "2021"
authors = ["vividcodeAI <vividcode@gmail.com>", "vividcodeAI"]
description = "MCP server for GDB debugging functionality"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "gdb", "communication", "embedded", "protocol", "embedded-gdb"]
categories = ["development-tools", "embedded"]

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = "0.4"
regex = "1"

[[bin]]
name = "embedded-gdb-mcp"
path = "src/main.rs"

[lib]
name = "embedded_gdb_mcp"
path = "src/lib.rs"
